# Marc-s-Market-Making-Simulator

./: .gitignore  CMakeCache.txt  CMakeConfigureLog.yaml  CMakeDirectoryInformation.cmake  CMakeLists.txt  CTestTestfile.cmake  InstallScripts.json  LICENSE  Makefile  Makefile.cmake  Makefile2  README.md  TargetDirectories.txt  __init__.py  analysis.ipynb  cmake_install.cmake  cmake_test_discovery_149ce002f8.json  glosten_milgrom.py  lob_benchmark  requirements.txt  synthetic.py  test_engine  test_python.py
4.3.2/: CMakeCCompiler.cmake
data/: synthetic.py
engine/: __init__.py  benchmark.cpp  bindings.cpp  lob.cpp  lob.hpp
lob_benchmark.dir/: DependInfo.cmake  build.make  cmake_clean.cmake  compiler_depend.make  compiler_depend.ts  depend.make  flags.make  link.txt
lob_benchmark.dir/engine/: benchmark.cpp.o.d  lob.cpp.o.d
lob_engine.dir/: DependInfo.cmake  build.make  cmake_clean.cmake  compiler_depend.internal  compiler_depend.make  flags.make  link.txt
lob_engine.dir/engine/: bindings.cpp.o.d  lob.cpp.o.d
notebooks/: analysis.ipynb  analysis_executed.ipynb
sim/: __init__.py  backtester.py  metrics.py
strategies/: avellaneda_stoikov.py  naive.py
test_engine.dir/: DependInfo.cmake  build.make  cmake_clean.cmake  flags.make  link.txt
test_engine.dir/engine/: lob.cpp.o.d
test_engine.dir/tests/: test_engine.cpp.o.d
tests/: test_engine.cpp
